Working version with hopper, and variable number of barges to show the occurrance of variable front widths.

--- a/Example 21 - Automatically generated sites and activities.ipynb
+++ b/Example 21 - Automatically generated sites and activities.ipynb
@@ -112,11 +112,12 @@
     "    container: a simpy object that can hold stuff\n",
     "    total_requested: a counter needed to prevent over-handling\"\"\"\n",
     "\n",
-    "    def __init__(self, capacity, level=0, *args, **kwargs):\n",
+    "    def __init__(self, capacity, level=0, nr_resources=1, *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "        \"\"\"Initialization\"\"\"\n",
     "        self.container = simpy.Container(env, capacity, init=level)\n",
-    "        self.total_requested = 0\n"
+    "        self.total_requested = 0\n",
+    "        self.resource = simpy.Resource(env, capacity=nr_resources)\n"
    ]
   },
   {
@@ -190,15 +191,44 @@
     "    def execute_process(self, origin, destination, amount):\n",
     "        \"\"\"get amount from origin container, put amount in destination continater, \n",
     "        and yield the time it takes to process it\"\"\"\n",
-    "        origin.container.get(amount)\n",
-    "        destination.container.put(amount)\n",
-    "        yield self.env.timeout(amount / self.rate)\n",
-    "        \n",
-    "        origin.log_entry('', self.env.now, origin.container.level)\n",
-    "        destination.log_entry('', self.env.now, destination.container.level)\n",
-    "        \n",
-    "        print('  process:        ' + '%4.2f' % ((amount / self.rate)/3600) + ' hrs')\n",
+    " \n",
+    "        if type(origin).__name__== \"Site\":\n",
+    "            with origin.resource.request() as my_get_turn:\n",
+    "                yield my_get_turn\n",
+    "\n",
+    "                origin.container.get(amount)\n",
+    "                destination.container.put(amount)\n",
+    "                yield self.env.timeout(amount / self.rate)\n",
+    "\n",
+    "                origin.log_entry('', self.env.now, origin.container.level)\n",
+    "                destination.log_entry('', self.env.now, destination.container.level)\n",
+    "\n",
+    "                print('  process:        ' + '%4.2f' % ((amount / self.rate)/3600) + ' hrs')\n",
+    "                \n",
+    "        elif type(destination).__name__== \"Site\":\n",
+    "            with destination.resource.request() as my_put_turn:\n",
+    "                yield my_put_turn\n",
+    "\n",
+    "                origin.container.get(amount)\n",
+    "                destination.container.put(amount)\n",
+    "                yield self.env.timeout(amount / self.rate)\n",
+    "\n",
+    "                origin.log_entry('', self.env.now, origin.container.level)\n",
+    "                destination.log_entry('', self.env.now, destination.container.level)\n",
+    "                \n",
+    "                destination.resource.release(my_put_turn)\n",
+    "                \n",
+    "                print('  process:        ' + '%4.2f' % ((amount / self.rate)/3600) + ' hrs')\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(Site_KP00_armour).__name__== \"Site\""
    ]
   },
   {
@@ -379,7 +409,7 @@
     "            # request access to the transport_resource\n",
     "            origin.total_requested += amount\n",
     "            destination.total_requested += amount\n",
-    "            if id(loader) == id(mover):\n",
+    "            if id(loader) == id(mover): # this is the case when a hopper is used\n",
     "                with mover.resource.request() as my_mover_turn:\n",
     "                    yield my_mover_turn\n",
     "\n",
@@ -782,28 +812,28 @@
     "layer_name = '_levvel'\n",
     "previous_layer_name = '_armour'\n",
     "for i in range(nums):\n",
-    "    for transport_barge in transport_barges:\n",
-    "        # - sites in database (nr i indicates km's from Den Oever haven)\n",
-    "        if i==0:\n",
-    "            condition =  \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000\" + \\\n",
-    "                        ' and ' + \"Site_KP\" + format(i,'02.0f') + previous_layer_name + \".container.level==5000'''\"\n",
-    "            data_act = {\"env\": env,\n",
-    "                    \"name\": \"Block placement\",\n",
-    "                    \"origin\": stock_04, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
-    "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
-    "                    \"condition\": eval(condition)}\n",
-    "        else:\n",
-    "            condition = \"'''\" + eval(\"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\") + \\\n",
-    "                    ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + layer_name + \".container.level==5000'''\") + \\\n",
+    "#     for transport_barge in transport_barges:\n",
+    "    # - sites in database (nr i indicates km's from Den Oever haven)\n",
+    "    if i==0:\n",
+    "        condition =  \"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000\" + \\\n",
     "                    ' and ' + \"Site_KP\" + format(i,'02.0f') + previous_layer_name + \".container.level==5000'''\"\n",
-    "            data_act = {\"env\": env,\n",
-    "                    \"name\": \"Block placement\",\n",
-    "                    \"origin\": stock_04, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
-    "                    \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
-    "                    \"condition\": eval(condition)}\n",
+    "        data_act = {\"env\": env,\n",
+    "                \"name\": \"Block placement\",\n",
+    "                \"origin\": stock_04, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
+    "                \"condition\": eval(condition)}\n",
+    "    else:\n",
+    "        condition = \"'''\" + eval(\"'''Site_KP\" + format(i,'02.0f') + layer_name + \".container.level<5000'''\") + \\\n",
+    "                ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + layer_name + \".container.level==5000'''\") + \\\n",
+    "                ' and ' + \"Site_KP\" + format(i,'02.0f') + previous_layer_name + \".container.level==5000'''\"\n",
+    "        data_act = {\"env\": env,\n",
+    "                \"name\": \"Block placement\",\n",
+    "                \"origin\": stock_04, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f') + layer_name],\n",
+    "                \"loader\": gantry_crane, \"mover\": transport_barge, \"unloader\": installation_crane,\n",
+    "                \"condition\": eval(condition)}\n",
     "\n",
-    "        # - create site objects\n",
-    "        vars()['Act_' + format(i,'02.0f') + layer_name] = Installation(**data_act)\n",
+    "    # - create site objects\n",
+    "    vars()['Act_' + format(i,'02.0f') + layer_name] = Installation(**data_act)\n",
     "        "
    ]
   },
@@ -877,7 +907,7 @@
     "            pnt.style = style\n",
     "        begin = env.epoch + datetime.timedelta(seconds=site.t[-1])\n",
     "        end = env.epoch + datetime.timedelta(seconds=env.now)\n",
-    "        pnt = fol.newpoint(name=site.name, coords=[site.geometry[\"coordinates\"]])           \n",
+    "        pnt = fol.newpoint(name='', coords=[site.geometry[\"coordinates\"]])           \n",
     "        # convert to string\n",
     "        pnt.timespan.begin = begin.isoformat()\n",
     "        pnt.timespan.end = end.isoformat()\n",
@@ -905,13 +935,6 @@
     "else:\n",
     "    !start explorer ./sharedstyle.kml"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
