--- a/Example 21 - Automatically generated sites and activities.ipynb
+++ b/Example 21 - Automatically generated sites and activities.ipynb
@@ -5,17 +5,20 @@
    "metadata": {},
    "source": [
     "# Remaining issues:\n",
-    "## Need to haves:\n",
+    "## Handled issues:\n",
     "- [solved] distance between geometries is in degrees, we need it in meters to determine sailing durations\n",
-    "- [solved] need to check resource requests closely to check why sharing ships isn't working yet \n",
+    "- [solved] need to check resource requests closely to check why sharing ships isn't working yet\n",
+    "- [solved] need to add resource requests to sites\n",
     "- [solved] need to add real time (plus a specific starting date)\n",
     "- [solved] need to add logging to Sites to lists volumes at different timesteps (this helps to animate on Google Earth)\n",
+    "\n",
+    "## Open issues:\n",
     "- [open] need to add sensitivity to weather (see work Joris den Uijl)\n",
     "- [open] need to add soil characteristics and turbidity generation (see work Joris den Uijl)\n",
-    "\n",
-    "## Nice to haves:\n",
     "- [open] need to add routing via routing graph (Dijkstra algorithm)\n",
-    "- [open] need to make case handling web based (quick setup & quick case comparison)\n"
+    "- [open] need to make case handling web based (quick setup & quick case comparison)\n",
+    "- [open] need to collect the code in a package\n",
+    "- [open] change processing so that it can handle rate_in and rate_out in stead of just rate\n"
    ]
   },
   {
@@ -228,15 +231,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(Site_KP00_armour).__name__== \"Site\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class Log(object):\n",
     "    \"\"\"Log class\n",
     "    \n",
@@ -306,8 +300,7 @@
    "outputs": [],
    "source": [
     "class Processing_Resource(Identifiable, Location, Log, Process):\n",
-    "    def __init__(self, \n",
-    "                 *args, **kwargs):\n",
+    "    def __init__(self, *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n"
    ]
   },
@@ -409,7 +402,8 @@
     "            # request access to the transport_resource\n",
     "            origin.total_requested += amount\n",
     "            destination.total_requested += amount\n",
-    "            if id(loader) == id(mover): # this is the case when a hopper is used\n",
+    "            if id(loader) == id(mover): \n",
+    "                # this is the case when a hopper is used\n",
     "                with mover.resource.request() as my_mover_turn:\n",
     "                    yield my_mover_turn\n",
     "\n",
@@ -444,7 +438,8 @@
     "\n",
     "                    # once a mover is assigned to an Activity it completes a full cycle\n",
     "                    mover.resource.release(my_mover_turn)\n",
-    "            else:\n",
+    "            else: \n",
+    "                # if not a hopper is used we have to handle resource requests differently\n",
     "                with mover.resource.request() as my_mover_turn:\n",
     "                    yield my_mover_turn\n",
     "\n",
