First three examples properly formatted

--- a/notebooks/Example 01 - Building a Layered Dike.ipynb
+++ b/notebooks/Example 01 - Building a Layered Dike.ipynb
@@ -6,9 +6,14 @@
     "collapsed": true
    },
    "source": [
-    "## Example 01 - Building a Layered Dike\n",
-    "\n",
-    "This example defines a digital twin simulation in which several layers (from different materials) of a dike are constructed."
+    "## Example 01 - Building a Layered Dike"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example description:** Example of a construction challenge, with four separate activites, where each activity depends on the progress of the other activities."
    ]
   },
   {
