--- a/notebooks/Example 02 - Basic hopper operation.ipynb
+++ b/notebooks/Example 02 - Basic hopper operation.ipynb
@@ -4,8 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 02 - Basic Hopper operation\n",
-    "It starts with importing the required libraries, that is done by the next cel. After that, all example-specific relations and objects are defined."
+    "## Example 02 - Basic Hopper operation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example description:** Example of a trailing suction hopper dredge shipping sediment from origin to destination site."
    ]
   },
   {
