--- a/notebooks/Example 03 - Tracking spill.ipynb
+++ b/notebooks/Example 03 - Tracking spill.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example description:** Example of a project where sediment spill limits influence project progress"
+    "**Example description:** Example of a project where sediment spill limits influence project progress."
    ]
   },
   {
