Update notebooks to new (un)loading_func signature
Changed the input arguments of loading_func and unloading_func
to current_level, desired_level to allow a different (un)loading rate
for different levels. For now use a flat rate in the example notebooks.

--- a/notebooks/Example 03 - Tracking spill.ipynb
+++ b/notebooks/Example 03 - Tracking spill.ipynb
@@ -282,10 +282,10 @@
     "    return lambda x: x * (v_full - v_empty) + v_empty\n",
     "\n",
     "def compute_loading(rate):\n",
-    "    return lambda x: x / rate\n",
+    "    return lambda current_level, desired_level: (desired_level - current_level) / rate\n",
     "\n",
     "def compute_unloading(rate):\n",
-    "    return lambda x: x / rate"
+    "    return lambda current_level, desired_level: (current_level - desired_level) / rate"
    ]
   },
   {
@@ -4659,7 +4659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
