--- a/notebooks/Example 06 - Container Transfer Hub.ipynb
+++ b/notebooks/Example 06 - Container Transfer Hub.ipynb
@@ -1086,10 +1086,10 @@
     "    return lambda x: x * (v_full - v_empty) + v_empty\n",
     "\n",
     "def compute_loading(rate):\n",
-    "    return lambda x: x / rate\n",
+    "    return lambda current_level, desired_level: (desired_level - current_level) / rate\n",
     "\n",
     "def compute_unloading(rate):\n",
-    "    return lambda x: x / rate"
+    "    return lambda current_level, desired_level: (current_level - desired_level) / rate"
    ]
   },
   {
@@ -30196,7 +30196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
