--- a/tests/Roadmap/One_trip_example.ipynb
+++ b/tests/Roadmap/One_trip_example.ipynb
@@ -65,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x197e55546a0>]"
+       "[<matplotlib.lines.Line2D at 0x1fcae9817f0>]"
       ]
      },
      "execution_count": 5,
@@ -97,57 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Q = 0\n",
-    "Z = 0 \n",
-    "for i in range(10):\n",
-    "    Z+=1\n",
-    "    if Z> 5:\n",
-    "        break\n",
-    "Q = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "1555462800.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 4.53753281, 53.09774399])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path[17]"
+    "Roadmap.t[1]"
    ]
   },
   {
