Added test for python-side

--- a/notebooks/Example 09 - Temporary Storage.ipynb
+++ b/notebooks/Example 09 - Temporary Storage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 09 - Strange, but possible, configurations"
+    "## Example 09 - Temporary Storage"
    ]
   },
   {
