Renamed all files to OpenCLSim

--- a/notebooks/Example 05 - Basic hopper operation on route.ipynb
+++ b/notebooks/Example 05 - Basic hopper operation on route.ipynb
@@ -56,9 +56,9 @@
     "import numpy as np\n",
     "\n",
     "# digital twin package\n",
-    "import digital_twin.core as core\n",
-    "import digital_twin.model as model\n",
-    "import digital_twin.plot as plot\n",
+    "import openclsim.core as core\n",
+    "import openclsim.model as model\n",
+    "import openclsim.plot as plot\n",
     "\n",
     "# Used for making the graph to visualize our problem\n",
     "import networkx as nx"
