--- a/notebooks/Example 01 - Basic hopper operation.ipynb
+++ b/notebooks/Example 01 - Basic hopper operation.ipynb
@@ -56,12 +56,12 @@
     "import numpy as np\n",
     "\n",
     "# digital twin package\n",
-    "import digital_twin.core as core\n",
-    "import digital_twin.model as model\n",
-    "import digital_twin.plot as plot\n",
+    "import openclsim.core as core\n",
+    "import openclsim.model as model\n",
+    "import openclsim.plot as plot\n",
     "\n",
     "# Additional import to save the initialization of the simulation\n",
-    "import digital_twin.savesim as savesim"
+    "import openclsim.savesim as savesim"
    ]
   },
   {
