--- a/notebooks/Example 04 - Building a Layered Dike.ipynb
+++ b/notebooks/Example 04 - Building a Layered Dike.ipynb
@@ -59,9 +59,9 @@
     "import pandas as pd\n",
     "\n",
     "# digital twin package\n",
-    "import digital_twin.core as core\n",
-    "import digital_twin.model as model\n",
-    "import digital_twin.plot as plot"
+    "import openclsim.core as core\n",
+    "import openclsim.model as model\n",
+    "import openclsim.plot as plot"
    ]
   },
   {
