--- a/notebooks/Example 06 - Container Transfer Hub.ipynb
+++ b/notebooks/Example 06 - Container Transfer Hub.ipynb
@@ -57,9 +57,9 @@
     "import pandas as pd\n",
     "\n",
     "# digital twin package\n",
-    "import digital_twin.core as core\n",
-    "import digital_twin.model as model\n",
-    "import digital_twin.plot as plot\n",
+    "import openclsim.core as core\n",
+    "import openclsim.model as model\n",
+    "import openclsim.plot as plot\n",
     "\n",
     "# Used for making the graph to visualize our problem\n",
     "import networkx as nx"
