Change 'fuel' to 'energy' in notebook 02

--- a/notebooks/Example 02 - Energy use.ipynb
+++ b/notebooks/Example 02 - Energy use.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 02 - Fuel Use"
+    "## Example 02 - Energy Use"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example description:** Example of estimating fuel use on a project by keeping track of energy useage for each step of the production cycle."
+    "**Example description:** Example of estimating energy use on a project by keeping track of energy useage for each step of the production cycle."
    ]
   },
   {
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fuel use depends on vessel characteristics\n",
+    "# Energy use depends on vessel characteristics\n",
     "def compute_energy_use_loading(variable_1, variable_2):\n",
     "    # x could be the loaded volume, y could be the production rate\n",
     "    # so x / y would be a unit of time\n",
@@ -283,9 +283,9 @@
     "               \"unloading_func\": compute_unloading(1.5),                         # Unloading rate\n",
     "               \"capacity\": 5_000,                                                # Capacity of the hopper\n",
     "               \"compute_v\": compute_v_provider(5, 4.5),                          # Variable speed \n",
-    "               \"energy_use_loading\": compute_energy_use_loading(5_000, 1.0),     # Variable fuel use\n",
-    "               \"energy_use_sailing\": compute_energy_use_sailing(5_000, 0.5),     # Variable fuel use\n",
-    "               \"energy_use_unloading\": compute_energy_use_unloading(5_000, 1.0), # Variable fuel use\n",
+    "               \"energy_use_loading\": compute_energy_use_loading(5_000, 1.0),     # Variable energy use\n",
+    "               \"energy_use_sailing\": compute_energy_use_sailing(5_000, 0.5),     # Variable energy use\n",
+    "               \"energy_use_unloading\": compute_energy_use_unloading(5_000, 1.0), # Variable energy use\n",
     "               \"weekrate\": 700_000}"
    ]
   },
