rewrite test_halem_single_route (stupid error)

--- a/tests/Roadmap/02_Road_map_generator(Noos_Matroos_Data).ipynb
+++ b/tests/Roadmap/02_Road_map_generator(Noos_Matroos_Data).ipynb
@@ -54,7 +54,9 @@
     "\n",
     "number_of_neighbor_layers = 2\n",
     "vship = vship = np.array([[5],[7]])\n",
-    "WD_min = 6\n",
+    "WD_min = np.array([6, 5])\n",
+    "WPVI = np.array([6000, 5000])\n",
+    "\n",
     "Load_flow = flow_class.flow_NOOS\n",
     "\n",
     "\n",
@@ -65,17 +67,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_cost(week_rate, fuel_rate):\n",
-    "    second_rate = week_rate/7/24/60/60\n",
-    "    return lambda travel_time, speed: (travel_time*second_rate + fuel_rate*travel_time * speed**3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -84,8 +75,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0 %\n",
-      "the computational time is: 127.43 sec\n"
+      "4/4\n",
+      "the computational time is: 132.8 sec\n"
      ]
     }
    ],
@@ -100,8 +91,9 @@
     "                                    vship, \n",
     "                                    Load_flow, \n",
     "                                    WD_min,\n",
-    "                                    compute_cost(700_000, 0.0005),\n",
-    "                                    halem.Flow_class.nodes_on_land_Waddensea\n",
+    "                                    WPVI,\n",
+    "                                    nodes_on_land = halem.Flow_class.nodes_on_land_Waddensea,\n",
+    "                                    optimization_type = ['time', 'space', 'cost', 'co2']\n",
     "                                   )\n",
     "\n",
     "stop_time = time.time()\n",
@@ -111,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,17 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x18df6aa2b00>,\n",
-       " <matplotlib.lines.Line2D at 0x18df6aa2cc0>]"
+       "[<matplotlib.lines.Line2D at 0x200c3ff8588>,\n",
+       " <matplotlib.lines.Line2D at 0x200c3ff8828>]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -174,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
