bug fix from Pieter for _release_resource
small changes in the notebooks

--- a/openclsim/notebooks/02_MoveActivity.ipynb
+++ b/openclsim/notebooks/02_MoveActivity.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "init\nlevel: 2\ncompleted init\ninit\nlevel: 0\ncompleted init\n"
+    }
+   ],
    "source": [
     "# The generic site class\n",
     "Site = type(\n",
@@ -94,9 +100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "init\nlevel: 0\ncompleted init\n"
+    }
+   ],
    "source": [
     "# The generic class for an object that can move and transport (a TSHD for example)\n",
     "TransportProcessingResource = type(\n",
@@ -143,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +173,6 @@
     "    \"mover\": hopper,\n",
     "    \"destination\": to_site,\n",
     "}\n",
-    "\n",
     "activity = model.MoveActivity(**move_activity_data)"
    ]
   },
@@ -174,26 +185,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Mover_move before mover resource request\nput_callback - id_ default\n{}\nput_callback - id_ default\n{}\nput_callback - id_ default\n{}\nMover_move after mover resource request\nMover_move after move\n"
+    }
+   ],
    "source": [
     "my_env.run()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "          Message ActivityState           Timestamp  Value  \\\n0  Basic activity         START 1970-01-01 01:00:00     14   \n1  Basic activity          STOP 1970-01-01 01:00:14     14   \n\n                             ActivityID  \n0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Message</th>\n      <th>ActivityState</th>\n      <th>Timestamp</th>\n      <th>Value</th>\n      <th>ActivityID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Basic activity</td>\n      <td>START</td>\n      <td>1970-01-01 01:00:00</td>\n      <td>14</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Basic activity</td>\n      <td>STOP</td>\n      <td>1970-01-01 01:00:14</td>\n      <td>14</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                                             Message ActivityState  \\\n0  move activity Soil movement of Hopper 01 to Du...         START   \n1  move activity Soil movement of Hopper 01 to Du...          STOP   \n\n                   Timestamp  Value                            ActivityID  \n0 1970-01-01 01:00:00.000000     -1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n1 1970-01-01 01:15:42.824591     -1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Message</th>\n      <th>ActivityState</th>\n      <th>Timestamp</th>\n      <th>Value</th>\n      <th>ActivityID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>move activity Soil movement of Hopper 01 to Du...</td>\n      <td>START</td>\n      <td>1970-01-01 01:00:00.000000</td>\n      <td>-1</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>move activity Soil movement of Hopper 01 to Du...</td>\n      <td>STOP</td>\n      <td>1970-01-01 01:15:42.824591</td>\n      <td>-1</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 6
     }
    ],
    "source": [
@@ -201,6 +218,13 @@
     "data =log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
