--- a/openclsim/notebooks/06_MultiContainer.ipynb
+++ b/openclsim/notebooks/06_MultiContainer.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -153,13 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "start event instance None\n"
+     "text": "SHift amount Activity keep_resources []\nstart event instance None\n"
     }
    ],
    "source": [
@@ -188,22 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "start : {}\n{'origin.6dbbbdf4-4589-11e9-a501-b469212bff5d': 2, 'destination.6dbbbdf6-4589-11e9-95a2-b469212bff5b': 2}\ndestination request : {<simpy.resources.resource.Resource object at 0x00000275E3B67488>: <Request() object at 0x275daa860c8>}\nstart get_available\nprocessor request : {<simpy.resources.resource.Resource object at 0x00000275E3B67488>: <Request() object at 0x275daa860c8>}\nsite request : {<simpy.resources.resource.Resource object at 0x00000275E3B67488>: <Request() object at 0x275daa860c8>, <simpy.resources.resource.Resource object at 0x00000275E3B5A808>: <Request() object at 0x275e3b625c8>}\nend requestIfAvailable : {<simpy.resources.resource.Resource object at 0x00000275E3B67488>: <Request() object at 0x275daa860c8>, <simpy.resources.resource.Resource object at 0x00000275E3B5A808>: <Request() object at 0x275e3b625c8>}\nafter req resource if available : {<simpy.resources.resource.Resource object at 0x00000275E3B67488>: <Request() object at 0x275daa860c8>, <simpy.resources.resource.Resource object at 0x00000275E3B5A808>: <Request() object at 0x275e3b625c8>}\n_shift_amount\nstart _shift_amount\namount 1\nprocessor start process\ntransfer MP to Hopper 01\nprocessor process without rate\norigin store before get: [{'id': 'MP', 'level': 2, 'capacity': 10}, {'id': 'TP', 'level': 0, 'capacity': 2}]\nstart get 1\nstore_status {'id': 'MP', 'level': 2, 'capacity': 10}\nend get 1\nget_callback - id_ <StorePut() object at 0x275e3b62848>\nstart get_callback\n{}\norigin store after get: [{'id': 'TP', 'level': 0, 'capacity': 2}, {'id': 'MP', 'level': 1, 'capacity': 10}]\nafter get\nafter check_down time\ndestination store before put: [{'id': 'MP', 'level': 0, 'capacity': 2}, {'id': 'TP', 'level': 0, 'capacity': 2}]\n<FilterStoreGet() object at 0x275e3b62848>\nput_callback - id_ MP\n{}\ndestination store after put: [{'id': 'TP', 'level': 0, 'capacity': 2}, {'id': 'MP', 'level': 1, 'capacity': 2}]\nafter put\nprocessor end process\nProcessed 1 of MP:\n  by:          Hopper 01\n  origin        Winlocatie  contains: 1 of MP\n  destination:  Hopper 01 contains: 1 of MP\nafter shift amount : {<simpy.resources.resource.Resource object at 0x00000275E3B67488>: <Request() object at 0x275daa860c8>, <simpy.resources.resource.Resource object at 0x00000275E3B5A808>: <Request() object at 0x275e3b625c8>}\nrelease destination : {<simpy.resources.resource.Resource object at 0x00000275E3B5A808>: <Request() object at 0x275e3b625c8>}\nreleased origin : {}\nreleased processor : {}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_env.run()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -213,13 +207,35 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Message</th>\n      <th>ActivityState</th>\n      <th>Timestamp</th>\n      <th>Value</th>\n      <th>ActivityID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Transfer MP</td>\n      <td>START</td>\n      <td>1970-01-01 01:00:00</td>\n      <td>1</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff52</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Transfer MP</td>\n      <td>STOP</td>\n      <td>1970-01-01 01:00:20</td>\n      <td>1</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff52</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 17
     }
    ],
    "source": [
     "log_df = pd.DataFrame(activity.log)\n",
     "data =log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "                    Message ActivityState           Timestamp  Value  \\\n0  transfer MP to Hopper 01         START 1970-01-01 01:00:00      1   \n2  transfer MP to Hopper 01          STOP 1970-01-01 01:00:20      1   \n\n                             ActivityID  \n0  6dbbbdf7-4589-11e9-bf3b-b469212bff52  \n2  6dbbbdf7-4589-11e9-bf3b-b469212bff52  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Message</th>\n      <th>ActivityState</th>\n      <th>Timestamp</th>\n      <th>Value</th>\n      <th>ActivityID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>transfer MP to Hopper 01</td>\n      <td>START</td>\n      <td>1970-01-01 01:00:00</td>\n      <td>1</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff52</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>transfer MP to Hopper 01</td>\n      <td>STOP</td>\n      <td>1970-01-01 01:00:20</td>\n      <td>1</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff52</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "hopper_log_df = pd.DataFrame(hopper.log)\n",
+    "hopper_data =hopper_log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
+    "hopper_data = hopper_data.drop_duplicates()\n",
+    "hopper_data"
    ]
   },
   {
