--- a/openclsim/notebooks/03_ShiftAmountActivity.ipynb
+++ b/openclsim/notebooks/03_ShiftAmountActivity.ipynb
@@ -46,9 +46,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "init\nlevel: 2\ncompleted init\ninit\nlevel: 0\ncompleted init\n"
+     "output_type": "stream",
+     "text": [
+      "init\n",
+      "level: 2\n",
+      "completed init\n",
+      "init\n",
+      "level: 0\n",
+      "completed init\n"
+     ]
     }
    ],
    "source": [
@@ -107,9 +114,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "init\nlevel: 0\ncompleted init\n"
+     "output_type": "stream",
+     "text": [
+      "init\n",
+      "level: 0\n",
+      "completed init\n"
+     ]
     }
    ],
    "source": [
@@ -162,9 +173,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "start event instance None\n"
+     "output_type": "stream",
+     "text": [
+      "start event instance None\n"
+     ]
     }
    ],
    "source": [
@@ -176,7 +189,7 @@
     "    \"processor\": hopper,\n",
     "    \"origin\": from_site,\n",
     "    \"destination\": hopper,\n",
-    "    \"amount\": 2,\n",
+    "    \"amount\": 100,\n",
     "    \"duration\": 10,\n",
     "}\n",
     "\n",
@@ -196,13 +209,61 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "start : {}\n{'origin.6dbbbdf4-4589-11e9-a501-b469212bff5b': 2, 'destination.6dbbbdf6-4589-11e9-95a2-b469212bff5b': 5}\nput_callback - id_ default\n{}\nput_callback - id_ default\n{}\nput_callback - id_ default\n{}\nput_callback - id_ default\n{}\ndestination request : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>}\nstart get_available\nprocessor request : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>}\nsite request : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>, <simpy.resources.resource.Resource object at 0x00000133773F3588>: <Request() object at 0x13375b71248>}\nend requestIfAvailable : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>, <simpy.resources.resource.Resource object at 0x00000133773F3588>: <Request() object at 0x13375b71248>}\nafter req resource if available : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>, <simpy.resources.resource.Resource object at 0x00000133773F3588>: <Request() object at 0x13375b71248>}\n_shift_amount\nstart _shift_amount\namount 2\nprocessor start process\ntransfer default to Hopper 01\nprocessor process without rate\norigin store before get: [{'id': 'default', 'level': 2, 'capacity': 10}]\nstart get 2\nstore_status {'id': 'default', 'level': 2, 'capacity': 10}\nend get 2\nget_callback - id_ <StorePut() object at 0x1336f9549c8>\nstart get_callback\n{}\norigin store after get: [{'id': 'default', 'level': 0, 'capacity': 10}]\nafter get\nafter check_down time\ndestination store before put: [{'id': 'default', 'level': 0, 'capacity': 5}]\n<FilterStoreGet() object at 0x133773f3dc8>\nput_callback - id_ default\n{}\ndestination store after put: [{'id': 'default', 'level': 2, 'capacity': 5}]\nafter put\nprocessor end process\nProcessed 2 of default:\n  by:          Hopper 01\n  origin        Winlocatie  contains: 0 of default\n  destination:  Hopper 01 contains: 2 of default\nafter shift amount : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>, <simpy.resources.resource.Resource object at 0x00000133773F3588>: <Request() object at 0x13375b71248>}\nrelease destination : {<simpy.resources.resource.Resource object at 0x00000133773F3588>: <Request() object at 0x13375b71248>}\nreleased origin : {}\nreleased processor : {}\n"
+     "output_type": "stream",
+     "text": [
+      "start : {}\n",
+      "{'origin.6dbbbdf4-4589-11e9-a501-b469212bff5b': 2, 'destination.6dbbbdf6-4589-11e9-95a2-b469212bff5b': 5}\n",
+      "put_callback - id_ default\n",
+      "{}\n",
+      "put_callback - id_ default\n",
+      "{}\n",
+      "put_callback - id_ default\n",
+      "{}\n",
+      "put_callback - id_ default\n",
+      "{}\n",
+      "destination request : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>}\n",
+      "start get_available\n",
+      "processor request : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>}\n",
+      "site request : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>, <simpy.resources.resource.Resource object at 0x00000133773F3588>: <Request() object at 0x13375b71248>}\n",
+      "end requestIfAvailable : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>, <simpy.resources.resource.Resource object at 0x00000133773F3588>: <Request() object at 0x13375b71248>}\n",
+      "after req resource if available : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>, <simpy.resources.resource.Resource object at 0x00000133773F3588>: <Request() object at 0x13375b71248>}\n",
+      "_shift_amount\n",
+      "start _shift_amount\n",
+      "amount 2\n",
+      "processor start process\n",
+      "transfer default to Hopper 01\n",
+      "processor process without rate\n",
+      "origin store before get: [{'id': 'default', 'level': 2, 'capacity': 10}]\n",
+      "start get 2\n",
+      "store_status {'id': 'default', 'level': 2, 'capacity': 10}\n",
+      "end get 2\n",
+      "get_callback - id_ <StorePut() object at 0x1336f9549c8>\n",
+      "start get_callback\n",
+      "{}\n",
+      "origin store after get: [{'id': 'default', 'level': 0, 'capacity': 10}]\n",
+      "after get\n",
+      "after check_down time\n",
+      "destination store before put: [{'id': 'default', 'level': 0, 'capacity': 5}]\n",
+      "<FilterStoreGet() object at 0x133773f3dc8>\n",
+      "put_callback - id_ default\n",
+      "{}\n",
+      "destination store after put: [{'id': 'default', 'level': 2, 'capacity': 5}]\n",
+      "after put\n",
+      "processor end process\n",
+      "Processed 2 of default:\n",
+      "  by:          Hopper 01\n",
+      "  origin        Winlocatie  contains: 0 of default\n",
+      "  destination:  Hopper 01 contains: 2 of default\n",
+      "after shift amount : {<simpy.resources.resource.Resource object at 0x00000133773FE748>: <Request() object at 0x133773f3208>, <simpy.resources.resource.Resource object at 0x00000133773F3588>: <Request() object at 0x13375b71248>}\n",
+      "release destination : {<simpy.resources.resource.Resource object at 0x00000133773F3588>: <Request() object at 0x13375b71248>}\n",
+      "released origin : {}\n",
+      "released processor : {}\n"
+     ]
     }
    ],
    "source": [
-    "my_env.run()\n"
+    "my_env.run()"
    ]
   },
   {
@@ -211,13 +272,67 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "       Message ActivityState           Timestamp  Value  \\\n0  Transfer MP         START 1970-01-01 01:00:00      2   \n1  Transfer MP          STOP 1970-01-01 01:00:10      2   \n\n                             ActivityID  \n0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Message</th>\n      <th>ActivityState</th>\n      <th>Timestamp</th>\n      <th>Value</th>\n      <th>ActivityID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Transfer MP</td>\n      <td>START</td>\n      <td>1970-01-01 01:00:00</td>\n      <td>2</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Transfer MP</td>\n      <td>STOP</td>\n      <td>1970-01-01 01:00:10</td>\n      <td>2</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Message</th>\n",
+       "      <th>ActivityState</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>ActivityID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Transfer MP</td>\n",
+       "      <td>START</td>\n",
+       "      <td>1970-01-01 01:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Transfer MP</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>1970-01-01 01:00:10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Message ActivityState           Timestamp  Value  \\\n",
+       "0  Transfer MP         START 1970-01-01 01:00:00      2   \n",
+       "1  Transfer MP          STOP 1970-01-01 01:00:10      2   \n",
+       "\n",
+       "                             ActivityID  \n",
+       "0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
+       "1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  "
+      ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -239,12 +354,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "2"
+      "text/plain": [
+       "2"
+      ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "execution_count": 8
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -257,12 +374,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "0"
+      "text/plain": [
+       "0"
+      ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -271,6 +390,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -281,12 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
