comment out old stuff and add config

--- a/openclsim/notebooks/000 - Questions.ipynb
+++ b/openclsim/notebooks/000 - Questions.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# All the logs that are produced by the activities and simul;ation objects should be only trrigger when verbose = true"
+    "# All the logs that are produced by the activities and simulation objects should be only trrigger when verbose = true"
    ]
   },
   {
@@ -66,12 +66,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# See notebook 15. This is a bug and a proove of why we need reservations"
+    "* Currently Loadingfunctions are not included\n",
+    "* amount should not be a required property\n",
+    "* please confirm to the styling rules (black, isort, pylama, ect.)\n",
+    "* All the logs that are produced by the activities and simulation objects should be only trrigger when verbose = true\n",
+    "* See notebook 15. This is a bug and a proove of why we need reservations\n",
+    "* Each rescource has a capacity (nr_resources) wich is by default one. If a origin has 1 rescourse one processor can load from or to that rescource at the same time. This is not included in the new activities!"
    ]
   },
   {
