small change on the multi cutter notebook

--- a/openclsim/notebooks/14_multiple_cutters_multiple_barges_example.ipynb
+++ b/openclsim/notebooks/14_multiple_cutters_multiple_barges_example.ipynb
@@ -79,6 +79,7 @@
     "    \"geometry\": location_from_site,  # The coordinates of the project site\n",
     "    \"capacity\": 4,\n",
     "    \"level\": 4,\n",
+    "    \"nr_resources\":3,\n",
     "}  # The actual volume of the site\n",
     "from_site = Site(**data_from_site)\n",
     "\n",
